@@ -26,12 +26,14 @@ class ManageUsersTest < IntegrationTest
     click_link "Users"
 
     within "#user_#{user.id}" do
-      click_link "Remove"
+      accept_confirm do
+        click_link "Remove"
+      end
     end
 
     # We need to give jquery a bit of time to let the record fadeout and
     # disappear
-    sleep 0.4
+    sleep 1
 
     refute page.has_content?("jane@example.com"), "Page should not have Jane anymore"
   end
