@@ -3,6 +3,7 @@ Please view this file on the master branch, on stable branches it's out of date.
 V 0.5.0 * TBD
 * Updated rails to 5.1 and ruby to 2.4.2 (jvanbaarsen)
 * Fix typo bug in production.rb preventing the app to start (jvanbaarsen)
+* Add Docker Compose setup for local development (michiels)
 * Make sure we run certain commands as sudo (jvanbaarsen)
 
 V 0.4.0 * 2017-12-01
